--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ ul li {
 .portfolio-item {
   display: inline-block;
   width: 50%;
-  min-height: 350px;
+  height: 85%;
   margin: 20px 2.5%;
   background: #fff;
   padding: 20px;
@@ -94,7 +94,11 @@ ul li {
 .portfolio-item a:hover {
   opacity: 0.8; /* Slightly change the opacity when hovered */
 }
-.project-image-1 {
+.project-image-2 {
+  height: 230px;
+}
+
+/* .project-image-1 {
   height: 200px;
 }
 
@@ -108,10 +112,10 @@ ul li {
 
 .project-image-4 {
   height: 190px;
-}
+} */
 
 .project-image-5 {
-  height: 170px;
+  /* height: 170px; */
   background-color: #333;
 }
 .project-image-6 {
